--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -9,4 +9,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/hello-world-javascript-action@main
-      - run: echo "${{ env.GLOBAL_VAR }} ${{ github.repository_owner }}"
+      - run: echo "${{ env.GLOBAL_VAR }} ${{ github.repository_owner }}. We're under ${{ github.workspace }}"
