--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -10,13 +10,8 @@ jobs:
     steps:
       - uses: actions/hello-world-javascript-action@main
       - run: echo "${{ env.GLOBAL_VAR }} ${{ github.repository_owner }}. We're under ${{ github.workspace }}"
-      - run: echo ${{ github }}
-      - run: echo ${{ env }}
-      - run: echo ${{ vars }}
-      - run: echo ${{ job }}
-      - run: echo ${{ steps }}
-      - run: echo ${{ runner }}
-      - run: echo ${{ secrets }}
-      - run: echo ${{ strategy }}
-      - run: echo ${{ needs }}
-      - run: echo ${{ inputs }}
+      - run: echo ${{ vars.DUMMY_VAR }}
+      - run: echo ${{ job.status }}
+      - run: echo ${{ runner.os }}
+      - run: echo ${{ secrets.DUMMY_SECRET }}
+      - run: echo ${{ strategy.fail-fast }}
