--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -14,13 +14,7 @@ jobs:
       - run: echo ${{ job.status }}
       - run: echo ${{ runner.os }}
       - run: echo ${{ secrets.DUMMY_SECRET }}
+        if: ${{startsWith(github.repository_owner, 'pronix'}}
       - run: echo ${{ strategy.fail-fast }}
       - run: echo "*******************************************"
-      - run: echo ${{ toJson(job) }}
-      - run: echo ${{ toJson(steps) }}
-      - run: echo ${{ toJson(runner) }}
-      - run: echo ${{ toJson(secrets) }}
-      - run: echo ${{ toJson(strategy) }}
-      - run: echo ${{ toJson(matrix) }}
-      - run: echo ${{ toJson(needs) }}
-      - run: echo ${{ toJson(inputs) }}
+
