--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -14,7 +14,7 @@ jobs:
       - run: echo ${{ job.status }}
       - run: echo ${{ runner.os }}
       - run: echo ${{ secrets.DUMMY_SECRET }}
-        if: ${{startsWith(github.repository_owner, 'pronix')}}
+        if: ${{startsWith(github.repository_owner, '1pronix')}}
       - run: echo ${{ strategy.fail-fast }}
       - run: echo "*******************************************"
 
