--- a/.github/workflows/manual-workflow.yml
+++ b/.github/workflows/manual-workflow.yml
@@ -13,7 +13,7 @@ on:
           - warning
       environment:
         description: 'Environment to run'
-        type: environment
+        type: string
         required: true
       tags:
         description: 'Test scenario tags'
