--- a/.github/workflows/manual-workflow.yml
+++ b/.github/workflows/manual-workflow.yml
@@ -13,7 +13,7 @@ on:
           - warning
       environment:
         description: 'Environment to run'
-        type: string
+        type: environment
         required: true
       tags:
         description: 'Test scenario tags'
@@ -32,7 +32,7 @@ jobs:
 
       - name: Prod env warning
         if: ${{ input.environment = 'prod' }}
-        run: echo 'Going to prod
+        run: echo 'Going to prod'
 
       - name: Common action
         run: |
