--- a/.github/workflows/wf-B.yml
+++ b/.github/workflows/wf-B.yml
@@ -21,6 +21,6 @@ jobs:
           echo 'Home dir: ${{ inputs.homeDir }}, \
           token: ${{ secrets.token }}'
       - id: step1
-        run: echo "first=dummy" >> ${{ GITHUB_OUTPUT }}
+        run: echo "first=dummy" >> $GITHUB_OUTPUT
     outputs:
       output1: ${{ steps.step1.outputs.first }}
