--- a/.github/workflows/event-wf.yml
+++ b/.github/workflows/event-wf.yml
@@ -15,7 +15,8 @@ jobs:
       - run: echo 'Building'
 
   publish:
-    needs: [build]
+    needs:
+      - build
     runs-on: ubuntu-latest
     environment: prod
     steps:
